--- a/style.css
+++ b/style.css
@@ -365,4 +365,12 @@ footer .credit {
     iframe {
         height: fit-content;
     }
+    .hero::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    bottom: 0;
+    background: linear-gradient(0deg, rgba(1, 1, 3, 1)8%, rgba(255, 255, 255, 0)50%);
+}
 }
