--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
 
 /* Hero section */
 .hero {
+    position: relative;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -86,18 +87,22 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 
 .hero::after {
     content: '';
     position: absolute;
-    width: 100%;
-    height: 30%;
+    /* width: 100%;
+    height: 30%; */
+    inset: 0;
     bottom: 0;
-    background: linear-gradient(0deg, rgba(1, 1, 3, 1)8%, rgba(255, 255, 255, 0)50%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1),rgba(0, 0, 0, 0.9));
 }
 
 .hero .content {
+    position: relative;
+    z-index: 1;
     padding: 1.4rem 7%;
     max-width: 60rem;
 }
